codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__plan_update_without_note_snapshot.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
● Updated Plan
  └ □ Define error taxonomy
    □ Implement mapping to user messages
