codex-rs/tui/src/snapshots/codex_tui__history_cell__tests__single_line_command_wraps_with_four_space_continuation.snap
---
source: tui/src/history_cell.rs
expression: rendered
---
● Ran a_very_long_token_
  │ without_spaces_to_
  │ force_wrapping
  └ (no output)
